--- a/config/alchemy/page_layouts.yml
+++ b/config/alchemy/page_layouts.yml
@@ -6,3 +6,8 @@
   unique: true
   elements: [article]
   autogenerate: [article]
+
+- name: farm
+  elements: [farm_info]
+  autogenerate: [farm_info]
+  cache: false
