Ads are displayed on farm page

--- a/config/alchemy/elements.yml
+++ b/config/alchemy/elements.yml
@@ -39,3 +39,9 @@
     type: EssenceBoolean
     hint: true
 
+- name: ad_space
+  contents:
+  - name: ad
+    type: EssencePicture
+    hint: true
+
